Extended API
